CHATS_SIT/force-app/main/default/objects/T_IDXR_STG_DELETE__c.object
<CustomObject>
    <description>Holds client details when Individual is physically deleted from CHATS application.</description>
    <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <description>Stores deleted Individual ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Client ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Notified_to_IDXR__c</fullName>
        <label>Notified to IDXR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>Added</label>
                </value>
                <value>
                    <fullName>U</fullName>
                    <label>Update</label>
                </value>
                <value>
                    <fullName>R</fullName>
                    <label>Removed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>IDXR Staging Delete</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>IDXR Staging ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IDXR Staging Delete</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>